# pricing

./: .coverage  .gitignore  .pre-commit-config.yaml  celerybeat-schedule  requirements.txt  test.py
base/: celery.py  settings.py
core/: manager.py
crawler/: admin.py  apps.py  crawl_services.py  exceptions.py  models.py  request_processor.py  task_handler.py  tasks.py  test_crawl.py  test_crawl_service.py  test_models.py
crawler/management/commands/: run_crawler.py
crawler/migrations/: 0001_initial.py
django/: .coverage  .pre-commit-config.yaml  celerybeat-schedule  coverage.xml  db.sqlite3  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  taskfile.yaml
django/base/: __init__.py  celery.py  settings.py  urls.py
django/core/: manager.py
django/crawler/: admin.py  crawl_services.py  models.py  request_processor.py  serializers.py  task_handler.py  views.py
django/crawler/api_services/: celery_service.py  db_service.py
django/crawler/management/commands/: run_crawler.py
django/crawler/migrations/: 0001_initial.py  0002_alter_user_email.py
django/crawler/services/: celery_service.py  db_service.py  kafka_producer.py
django/crawler/tests/: test_crawl.py  test_crawl_service.py  test_models.py
django/production/: Dockerfile.celery  Dockerfile.django  django_entrypoint.sh  docker-compose.yaml
fastApiProject/: .coverage  Dockerfile  main.py  message_handler.py  pyproject.toml  requirements.txt  task_handler.py
fastApiProject/services/: django_service.py  email_service.py  kafka_service.py
fastApiProject/tests/: test_notify.py
pricing/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
